force-app/main/default/objects/Renewal__c/Renewal__c.object-meta.xml
<CustomObject>
    <label>更新</label>
    <nameField>
        <displayFormat>R-{000000000}</displayFormat>
        <label>更新NO</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>