force-app/main/default/objects/Renewal__c/fields/AdditionalDifferenceDeposit__c.field-meta.xml
<CustomField>
    <fullName>AdditionalDifferenceDeposit__c</fullName>
    <label>敷金差額追加</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>