force-app/main/default/objects/Renewal__c/fields/ApplicationContentConfirmDate__c.field-meta.xml
<CustomField>
    <fullName>ApplicationContentConfirmDate__c</fullName>
    <label>申請内容確定日</label>
    <type>Date</type>
</CustomField>