force-app/main/default/objects/Renewal__c/fields/BankAccountInputDate__c.field-meta.xml
<CustomField>
    <fullName>BankAccountInputDate__c</fullName>
    <label>口座入力日</label>
    <type>Date</type>
</CustomField>