force-app/main/default/objects/Renewal__c/fields/BillReceiptDate__c.field-meta.xml
<CustomField>
    <fullName>BillReceiptDate__c</fullName>
    <label>請求書受領日</label>
    <type>Date</type>
</CustomField>