force-app/main/default/objects/Renewal__c/fields/Capital__c.field-meta.xml
<CustomField>
    <fullName>Capital__c</fullName>
    <formula>Account__r.Capital__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>資本金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>