force-app/main/default/objects/Renewal__c/fields/ChargeTeam__c.field-meta.xml
<CustomField>
    <fullName>ChargeTeam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>担当チーム</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipLabel>更新</relationshipLabel>
    <relationshipName>SQBG</relationshipName>
    <type>Lookup</type>
</CustomField>