force-app/main/default/objects/Renewal__c/fields/CollectReminderDate__c.field-meta.xml
<CustomField>
    <fullName>CollectReminderDate__c</fullName>
    <label>回収督促日</label>
    <type>Date</type>
</CustomField>