force-app/main/default/objects/Renewal__c/fields/CompanyReceiveDate__c.field-meta.xml
<CustomField>
    <fullName>CompanyReceiveDate__c</fullName>
    <label>企業了承日</label>
    <type>Date</type>
</CustomField>