force-app/main/default/objects/Renewal__c/fields/ComparisonNewManagementCharge__c.field-meta.xml
<CustomField>
    <fullName>ComparisonNewManagementCharge__c</fullName>
    <formula>NewManagementCharge__c  -  ManagementCharge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>比較_新管理費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>