force-app/main/default/objects/Renewal__c/fields/ConditionConfirmFreeSpace1__c.field-meta.xml
<CustomField>
    <fullName>ConditionConfirmFreeSpace1__c</fullName>
    <label>条件確認_フリースペース1</label>
    <type>TextArea</type>
</CustomField>