force-app/main/default/objects/Renewal__c/fields/ConditionConfirmFreeSpace2__c.field-meta.xml
<CustomField>
    <fullName>ConditionConfirmFreeSpace2__c</fullName>
    <label>条件確認_フリースペース2</label>
    <type>TextArea</type>
</CustomField>