force-app/main/default/objects/Renewal__c/fields/ConfirmationCollector__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationCollector__c</fullName>
    <label>確認書回収者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>