force-app/main/default/objects/Renewal__c/fields/ConfirmationCollectScheduleDate__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationCollectScheduleDate__c</fullName>
    <label>条件確認書回収予定日</label>
    <type>Date</type>
</CustomField>