force-app/main/default/objects/Renewal__c/fields/ConfirmationSendDate__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationSendDate__c</fullName>
    <label>確認書送付日</label>
    <type>Date</type>
</CustomField>