force-app/main/default/objects/Renewal__c/fields/ConfirmTermsResearchStartDate__c.field-meta.xml
<CustomField>
    <fullName>ConfirmTermsResearchStartDate__c</fullName>
    <label>確認条件調整開始日</label>
    <type>Date</type>
</CustomField>