force-app/main/default/objects/Renewal__c/fields/ConsumptionTaxRenewalAdministrativeFee__c.field-meta.xml
<CustomField>
    <fullName>ConsumptionTaxRenewalAdministrativeFee__c</fullName>
    <label>内消費税（更新事務手）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>