force-app/main/default/objects/Renewal__c/fields/ContactNameRealEstate__c.field-meta.xml
<CustomField>
    <fullName>ContactNameRealEstate__c</fullName>
    <formula>ResidentName__r.LastName + ResidentName__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>名前</label>
    <type>Text</type>
</CustomField>