force-app/main/default/objects/Renewal__c/fields/ContractExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ContractExpirationDate__c</fullName>
    <label>契約満了日</label>
    <type>Date</type>
</CustomField>