force-app/main/default/objects/Renewal__c/fields/ContractMoneyAccount1__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyAccount1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>送金先1_口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>更新 (送金先1_口座)</relationshipLabel>
    <relationshipName>RenewalBankAccountRelation109</relationshipName>
    <type>Lookup</type>
</CustomField>