force-app/main/default/objects/Renewal__c/fields/ContractorId__c.field-meta.xml
<CustomField>
    <fullName>ContractorId__c</fullName>
    <label>契約者ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>