force-app/main/default/objects/Renewal__c/fields/CorrectOwnerAddressIfTrue__c.field-meta.xml
<CustomField>
    <fullName>CorrectOwnerAddressIfTrue__c</fullName>
    <label>有の場合：正しい貸主住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>