force-app/main/default/objects/Renewal__c/fields/CorrectOwnerIftrue__c.field-meta.xml
<CustomField>
    <fullName>CorrectOwnerIftrue__c</fullName>
    <label>有の場合：正しい貸主名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>