force-app/main/default/objects/Renewal__c/fields/DailyRateGarageDifference__c.field-meta.xml
<CustomField>
    <fullName>DailyRateGarageDifference__c</fullName>
    <label>日割駐車差額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>