force-app/main/default/objects/Renewal__c/fields/DailyRateGarageDifferenceTaxCategory__c.field-meta.xml
<CustomField>
    <fullName>DailyRateGarageDifferenceTaxCategory__c</fullName>
    <label>日割駐車差額税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>