force-app/main/default/objects/Renewal__c/fields/DailyRateManagementChargeDifference__c.field-meta.xml
<CustomField>
    <fullName>DailyRateManagementChargeDifference__c</fullName>
    <label>日割管理差額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>