force-app/main/default/objects/Renewal__c/fields/DailyRateOther1Difference__c.field-meta.xml
<CustomField>
    <fullName>DailyRateOther1Difference__c</fullName>
    <label>日割その他1差額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>