force-app/main/default/objects/Renewal__c/fields/DetailIfTrue__c.field-meta.xml
<CustomField>
    <fullName>DetailIfTrue__c</fullName>
    <label>有の場合：詳細</label>
    <length>255</length>
    <type>Text</type>
</CustomField>