force-app/main/default/objects/Renewal__c/fields/DifferenceTotal__c.field-meta.xml
<CustomField>
    <fullName>DifferenceTotal__c</fullName>
    <description>敷金差額+月額差額合計</description>
    <formula>DepositDifference__c +   RentDifferenceTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>差額合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>