force-app/main/default/objects/Renewal__c/fields/EmailAdress__c.field-meta.xml
<CustomField>
    <fullName>EmailAdress__c</fullName>
    <formula>ResidentName__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>メールアドレス</label>
    <type>Text</type>
</CustomField>