force-app/main/default/objects/Renewal__c/fields/EmployeeNumber__c.field-meta.xml
<CustomField>
    <fullName>EmployeeNumber__c</fullName>
    <formula>RealEstate__r.ContractorName__r.EmployeeNum__c</formula>
    <label>社員番号</label>
    <type>Text</type>
</CustomField>