force-app/main/default/objects/Renewal__c/fields/ExpiryNoticeSendDate__c.field-meta.xml
<CustomField>
    <fullName>ExpiryNoticeSendDate__c</fullName>
    <label>満了通知送付日</label>
    <type>Date</type>
</CustomField>