force-app/main/default/objects/Renewal__c/fields/HomeFax__c.field-meta.xml
<CustomField>
    <fullName>HomeFax__c</fullName>
    <formula>ResidentName__r.HomeFax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>自宅FAX</label>
    <type>Text</type>
</CustomField>