force-app/main/default/objects/Renewal__c/fields/HomePhone__c.field-meta.xml
<CustomField>
    <fullName>HomePhone__c</fullName>
    <formula>ResidentName__r.HomePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>自宅TEL</label>
    <type>Text</type>
</CustomField>