force-app/main/default/objects/Renewal__c/fields/IsAdress__c.field-meta.xml
<CustomField>
    <fullName>IsAdress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>所在地チェック</label>
    <type>Checkbox</type>
</CustomField>