force-app/main/default/objects/Renewal__c/fields/IsBrrowerReceiptCollect__c.field-meta.xml
<CustomField>
    <fullName>IsBrrowerReceiptCollect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>借主控え回収</label>
    <type>Checkbox</type>
</CustomField>