force-app/main/default/objects/Renewal__c/fields/isFaxFlowRenewalApprovalContact__c.field-meta.xml
<CustomField>
    <fullName>isFaxFlowRenewalApprovalContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>承認連絡Faxフローフラグ</label>
    <type>Checkbox</type>
</CustomField>