force-app/main/default/objects/Renewal__c/fields/IsNoConfirmationSend__c.field-meta.xml
<CustomField>
    <fullName>IsNoConfirmationSend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>確認書送付無し</label>
    <type>Checkbox</type>
</CustomField>