force-app/main/default/objects/Renewal__c/fields/IsNoReminderDate__c.field-meta.xml
<CustomField>
    <fullName>IsNoReminderDate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>督促日無し</label>
    <type>Checkbox</type>
</CustomField>