force-app/main/default/objects/Renewal__c/fields/IsNoRenewalNoticeArriveDate__c.field-meta.xml
<CustomField>
    <fullName>IsNoRenewalNoticeArriveDate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>更新通知着日無し</label>
    <type>Checkbox</type>
</CustomField>