force-app/main/default/objects/Renewal__c/fields/IsOwnerInfoCorrection__c.field-meta.xml
<CustomField>
    <fullName>IsOwnerInfoCorrection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>家主情報チェック</label>
    <type>Checkbox</type>
</CustomField>