force-app/main/default/objects/Renewal__c/fields/IsRealEstateName__c.field-meta.xml
<CustomField>
    <fullName>IsRealEstateName__c</fullName>
    <defaultValue>false</defaultValue>
    <label>物件名チェック</label>
    <type>Checkbox</type>
</CustomField>