force-app/main/default/objects/Renewal__c/fields/IsRecipientTransferFee1__c.field-meta.xml
<CustomField>
    <fullName>IsRecipientTransferFee1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>送金先1_振込手数料先方負担</label>
    <type>Checkbox</type>
</CustomField>