force-app/main/default/objects/Renewal__c/fields/IsRecipientTransferFee2__c.field-meta.xml
<CustomField>
    <fullName>IsRecipientTransferFee2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>送金先2_振込手数料先方負担</label>
    <type>Checkbox</type>
</CustomField>