force-app/main/default/objects/Renewal__c/fields/IsReminderConfirmation__c.field-meta.xml
<CustomField>
    <fullName>IsReminderConfirmation__c</fullName>
    <formula>AND(ISNULL(  ConfirmationCollectDate__c  ), ConfirmationCollectScheduleDate__c &lt;TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>条件確認書督促対象フラグ</label>
    <type>Checkbox</type>
</CustomField>