force-app/main/default/objects/Renewal__c/fields/IsRoomNum__c.field-meta.xml
<CustomField>
    <fullName>IsRoomNum__c</fullName>
    <defaultValue>false</defaultValue>
    <label>部屋番号チェック</label>
    <type>Checkbox</type>
</CustomField>