force-app/main/default/objects/Renewal__c/fields/ItemIfTrue__c.field-meta.xml
<CustomField>
    <fullName>ItemIfTrue__c</fullName>
    <label>有の場合：項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>