force-app/main/default/objects/Renewal__c/fields/Maneger__c.field-meta.xml
<CustomField>
    <fullName>Maneger__c</fullName>
    <label>ご担当者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>