force-app/main/default/objects/Renewal__c/fields/MatchingResult__c.field-meta.xml
<CustomField>
    <fullName>MatchingResult__c</fullName>
    <label>マッチング結果</label>
    <type>TextArea</type>
</CustomField>