force-app/main/default/objects/Renewal__c/fields/MobileNum1__c.field-meta.xml
<CustomField>
    <fullName>MobileNum1__c</fullName>
    <formula>ResidentName__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>携帯番号1</label>
    <type>Text</type>
</CustomField>