force-app/main/default/objects/Renewal__c/fields/MonthlyVariableCost5TaxCategory__c.field-meta.xml
<CustomField>
    <fullName>MonthlyVariableCost5TaxCategory__c</fullName>
    <label>月次変動費5税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>