force-app/main/default/objects/Renewal__c/fields/NewCommonCharge__c.field-meta.xml
<CustomField>
    <fullName>NewCommonCharge__c</fullName>
    <label>新共益費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>