force-app/main/default/objects/Renewal__c/fields/NewCommonChargeTaxCategory__c.field-meta.xml
<CustomField>
    <fullName>NewCommonChargeTaxCategory__c</fullName>
    <label>新共益費税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>