force-app/main/default/objects/Renewal__c/fields/NewConsumptionTaxCharges__c.field-meta.xml
<CustomField>
    <fullName>NewConsumptionTaxCharges__c</fullName>
    <label>新更新事務手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>