force-app/main/default/objects/Renewal__c/fields/NewContractTermEndDate__c.field-meta.xml
<CustomField>
    <fullName>NewContractTermEndDate__c</fullName>
    <label>新契約終期</label>
    <type>Date</type>
</CustomField>