force-app/main/default/objects/Renewal__c/fields/NewOther1Amount__c.field-meta.xml
<CustomField>
    <fullName>NewOther1Amount__c</fullName>
    <label>新その他１金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>