force-app/main/default/objects/Renewal__c/fields/NewOther2Amount__c.field-meta.xml
<CustomField>
    <fullName>NewOther2Amount__c</fullName>
    <label>新その他２金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>