force-app/main/default/objects/Renewal__c/fields/NewOther4ExpenseItems__c.field-meta.xml
<CustomField>
    <fullName>NewOther4ExpenseItems__c</fullName>
    <label>新その他４費目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>