force-app/main/default/objects/Renewal__c/fields/NewOther5ExpenseItems__c.field-meta.xml
<CustomField>
    <fullName>NewOther5ExpenseItems__c</fullName>
    <label>新その他５費目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>