force-app/main/default/objects/Renewal__c/fields/NewOther6ExpenseItems__c.field-meta.xml
<CustomField>
    <fullName>NewOther6ExpenseItems__c</fullName>
    <label>新その他６費目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>