force-app/main/default/objects/Renewal__c/fields/NewOtherAmountTaxCategory3__c.field-meta.xml
<CustomField>
    <fullName>NewOtherAmountTaxCategory3__c</fullName>
    <label>新その他３税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>