force-app/main/default/objects/Renewal__c/fields/NewOtherAmountTaxCategory4__c.field-meta.xml
<CustomField>
    <fullName>NewOtherAmountTaxCategory4__c</fullName>
    <label>新その他４税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>