force-app/main/default/objects/Renewal__c/fields/NewRenewalFee__c.field-meta.xml
<CustomField>
    <fullName>NewRenewalFee__c</fullName>
    <label>新更新料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>