force-app/main/default/objects/Renewal__c/fields/Other1Amount__c.field-meta.xml
<CustomField>
    <fullName>Other1Amount__c</fullName>
    <label>その他１金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>