force-app/main/default/objects/Renewal__c/fields/OtherAmountTaxCategory1__c.field-meta.xml
<CustomField>
    <fullName>OtherAmountTaxCategory1__c</fullName>
    <label>その他１税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>