force-app/main/default/objects/Renewal__c/fields/OtherProcedureExpense2TaxCategory__c.field-meta.xml
<CustomField>
    <fullName>OtherProcedureExpense2TaxCategory__c</fullName>
    <label>その他請求2税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>