force-app/main/default/objects/Renewal__c/fields/OtherProcedureExpense4TaxCategory__c.field-meta.xml
<CustomField>
    <fullName>OtherProcedureExpense4TaxCategory__c</fullName>
    <label>その他請求4税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>