force-app/main/default/objects/Renewal__c/fields/PaymentTotal__c.field-meta.xml
<CustomField>
    <fullName>PaymentTotal__c</fullName>
    <formula>BillingRenewalFee__c  +  DepositDifference__c  +  OtherTotal1__c  +  BillingRenewalAdministrativeFee__c  +  RentDifferenceTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>支払合計</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>