force-app/main/default/objects/Renewal__c/fields/PhoneRepresentative__c.field-meta.xml
<CustomField>
    <fullName>PhoneRepresentative__c</fullName>
    <formula>Account__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TEL（代表）</label>
    <type>Text</type>
</CustomField>