force-app/main/default/objects/Renewal__c/fields/PriceCutCorrespondenceTarget__c.field-meta.xml
<CustomField>
    <fullName>PriceCutCorrespondenceTarget__c</fullName>
    <label>値下げ対応対象</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>対象</fullName>
            </value>
            <value>
                <fullName>対象外</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>