force-app/main/default/objects/Renewal__c/fields/PriceIncreaseRequestAmount__c.field-meta.xml
<CustomField>
    <fullName>PriceIncreaseRequestAmount__c</fullName>
    <label>値上げ依頼額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>