force-app/main/default/objects/Renewal__c/fields/RealEstateAdress__c.field-meta.xml
<CustomField>
    <fullName>RealEstateAdress__c</fullName>
    <formula>TEXT( RealEstate__r.State__c )+
RealEstate__r.City__c +
 RealEstate__r.Street__c</formula>
    <label>所在地</label>
    <type>Text</type>
</CustomField>