force-app/main/default/objects/Renewal__c/fields/RealEstateInfoCorrectionContent__c.field-meta.xml
<CustomField>
    <fullName>RealEstateInfoCorrectionContent__c</fullName>
    <label>物件情報訂正内容</label>
    <length>255</length>
    <type>Text</type>
</CustomField>