force-app/main/default/objects/Renewal__c/fields/Reapplication1CorpHDContactContentAfter__c.field-meta.xml
<CustomField>
    <fullName>Reapplication1CorpHDContactContentAfter__c</fullName>
    <label>再申請①社宅D連絡内容（承認後）</label>
    <type>TextArea</type>
</CustomField>