force-app/main/default/objects/Renewal__c/fields/Reapplication1CorpHDContactDateAfter__c.field-meta.xml
<CustomField>
    <fullName>Reapplication1CorpHDContactDateAfter__c</fullName>
    <label>再申請①社宅D連絡日（承認後）</label>
    <type>Date</type>
</CustomField>