force-app/main/default/objects/Renewal__c/fields/Reapplication1FinanceCorrespondenceMemoA__c.field-meta.xml
<CustomField>
    <fullName>Reapplication1FinanceCorrespondenceMemoA__c</fullName>
    <label>再申請①経理対応メモ（承認後）</label>
    <type>TextArea</type>
</CustomField>