force-app/main/default/objects/Renewal__c/fields/Reapplication1RealEstateCompanyContact__c.field-meta.xml
<CustomField>
    <fullName>Reapplication1RealEstateCompanyContact__c</fullName>
    <label>再申請①不動産会社連絡日</label>
    <type>Date</type>
</CustomField>