force-app/main/default/objects/Renewal__c/fields/Reapplication2CorpHDContactContentAfter__c.field-meta.xml
<CustomField>
    <fullName>Reapplication2CorpHDContactContentAfter__c</fullName>
    <label>再申請②社宅D連絡内容（承認後）</label>
    <type>TextArea</type>
</CustomField>