force-app/main/default/objects/Renewal__c/fields/Reapplication2EmployeeContactDate__c.field-meta.xml
<CustomField>
    <fullName>Reapplication2EmployeeContactDate__c</fullName>
    <label>再申請②社員連絡日</label>
    <type>Date</type>
</CustomField>