force-app/main/default/objects/Renewal__c/fields/Reapplication2RealEstateCompanyAccept__c.field-meta.xml
<CustomField>
    <fullName>Reapplication2RealEstateCompanyAccept__c</fullName>
    <label>再申請②不動産会社了承日</label>
    <type>Date</type>
</CustomField>