force-app/main/default/objects/Renewal__c/fields/Reapplication2ReconfirmSubmitDate__c.field-meta.xml
<CustomField>
    <fullName>Reapplication2ReconfirmSubmitDate__c</fullName>
    <label>再申請②再査提出日</label>
    <type>Date</type>
</CustomField>