force-app/main/default/objects/Renewal__c/fields/Reapplication3CompanyContactDate__c.field-meta.xml
<CustomField>
    <fullName>Reapplication3CompanyContactDate__c</fullName>
    <label>再申請③企業連絡日</label>
    <type>Date</type>
</CustomField>