force-app/main/default/objects/Renewal__c/fields/Reapplication3CorpHDCorrespondenceMemoA__c.field-meta.xml
<CustomField>
    <fullName>Reapplication3CorpHDCorrespondenceMemoA__c</fullName>
    <label>再申請③社宅D対応メモ（承認後）</label>
    <type>TextArea</type>
</CustomField>