force-app/main/default/objects/Renewal__c/fields/Reapplication3ReconfirmSubmitDate__c.field-meta.xml
<CustomField>
    <fullName>Reapplication3ReconfirmSubmitDate__c</fullName>
    <label>再申請③再査提出日</label>
    <type>Date</type>
</CustomField>