force-app/main/default/objects/Renewal__c/fields/Reapplication3ReReconfirmDate__c.field-meta.xml
<CustomField>
    <fullName>Reapplication3ReReconfirmDate__c</fullName>
    <label>再申請③（再）再査日</label>
    <type>Date</type>
</CustomField>