force-app/main/default/objects/Renewal__c/fields/RECheckSeq__c.field-meta.xml
<CustomField>
    <fullName>RECheckSeq__c</fullName>
    <label>更新チェックSEQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>