force-app/main/default/objects/Renewal__c/fields/ReconfirmReturnDate__c.field-meta.xml
<CustomField>
    <fullName>ReconfirmReturnDate__c</fullName>
    <label>再査戻し日</label>
    <type>Date</type>
</CustomField>