force-app/main/default/objects/Renewal__c/fields/ReconfirmReturnReson__c.field-meta.xml
<CustomField>
    <fullName>ReconfirmReturnReson__c</fullName>
    <label>再査戻し理由</label>
    <type>TextArea</type>
</CustomField>