force-app/main/default/objects/Renewal__c/fields/ReconfirmSubmitDate__c.field-meta.xml
<CustomField>
    <fullName>ReconfirmSubmitDate__c</fullName>
    <label>再査提出日</label>
    <type>Date</type>
</CustomField>