force-app/main/default/objects/Renewal__c/fields/RegistrationCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>RegistrationCompletionDate__c</fullName>
    <label>登録完了日</label>
    <type>Date</type>
</CustomField>