force-app/main/default/objects/Renewal__c/fields/RenewalAdministrativeFeeTaxCategory__c.field-meta.xml
<CustomField>
    <fullName>RenewalAdministrativeFeeTaxCategory__c</fullName>
    <label>更新事務手数料税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>