force-app/main/default/objects/Renewal__c/fields/RenewalCategory__c.field-meta.xml
<CustomField>
    <fullName>RenewalCategory__c</fullName>
    <label>更新区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>