force-app/main/default/objects/Renewal__c/fields/RenewalContractArriveDate__c.field-meta.xml
<CustomField>
    <fullName>RenewalContractArriveDate__c</fullName>
    <label>更新契約書着日</label>
    <type>Date</type>
</CustomField>