force-app/main/default/objects/Renewal__c/fields/RenewalCounterStaff__c.field-meta.xml
<CustomField>
    <fullName>RenewalCounterStaff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>更新窓口担当者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>更新 (更新窓口担当者)</relationshipLabel>
    <relationshipName>RelationContactRenewal5</relationshipName>
    <type>Lookup</type>
</CustomField>