force-app/main/default/objects/Renewal__c/fields/RenewalDailyRateRentBilling__c.field-meta.xml
<CustomField>
    <fullName>RenewalDailyRateRentBilling__c</fullName>
    <label>更新日割家賃請求</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>請求あり</fullName>
            </value>
            <value>
                <fullName>請求なし</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>