force-app/main/default/objects/Renewal__c/fields/RenewalDocumentReturnAddressAdress__c.field-meta.xml
<CustomField>
    <fullName>RenewalDocumentReturnAddressAdress__c</fullName>
    <label>更新書類返送先住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>