force-app/main/default/objects/Renewal__c/fields/RenewalDocumentReturnAddressStaff__c.field-meta.xml
<CustomField>
    <fullName>RenewalDocumentReturnAddressStaff__c</fullName>
    <label>更新書類返送先担当</label>
    <length>255</length>
    <type>Text</type>
</CustomField>