force-app/main/default/objects/Renewal__c/fields/RenewalFeeTransferDate__c.field-meta.xml
<CustomField>
    <fullName>RenewalFeeTransferDate__c</fullName>
    <label>更新料振込日</label>
    <type>Date</type>
</CustomField>