force-app/main/default/objects/Renewal__c/fields/RenewalGuarantorSign__c.field-meta.xml
<CustomField>
    <fullName>RenewalGuarantorSign__c</fullName>
    <label>更新保証人印</label>
    <length>255</length>
    <type>Text</type>
</CustomField>