force-app/main/default/objects/Renewal__c/fields/RenewalInvoiceBorrower__c.field-meta.xml
<CustomField>
    <fullName>RenewalInvoiceBorrower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>更新送付書借主</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>RenewalAccountRelation6</relationshipName>
    <type>Lookup</type>
</CustomField>