force-app/main/default/objects/Renewal__c/fields/RenewalMainCounterFAX__c.field-meta.xml
<CustomField>
    <fullName>RenewalMainCounterFAX__c</fullName>
    <label>更新窓口FAX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>