force-app/main/default/objects/Renewal__c/fields/RenewalMainCounterPhone__c.field-meta.xml
<CustomField>
    <fullName>RenewalMainCounterPhone__c</fullName>
    <label>更新窓口電話番号</label>
    <type>Phone</type>
</CustomField>