force-app/main/default/objects/Renewal__c/fields/RenewalNecessaryDocument__c.field-meta.xml
<CustomField>
    <fullName>RenewalNecessaryDocument__c</fullName>
    <label>更新必要書類</label>
    <type>TextArea</type>
</CustomField>