force-app/main/default/objects/Renewal__c/fields/RenewalNote2__c.field-meta.xml
<CustomField>
    <fullName>RenewalNote2__c</fullName>
    <label>更新備考2</label>
    <type>TextArea</type>
</CustomField>