force-app/main/default/objects/Renewal__c/fields/RenewalNoticeArriveDateEnteredBy__c.field-meta.xml
<CustomField>
    <fullName>RenewalNoticeArriveDateEnteredBy__c</fullName>
    <label>更新通知着日入力者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>