force-app/main/default/objects/Renewal__c/fields/RenewalProcess1__c.field-meta.xml
<CustomField>
    <fullName>RenewalProcess1__c</fullName>
    <label>更新行程1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>