force-app/main/default/objects/Renewal__c/fields/RenewalProcess4__c.field-meta.xml
<CustomField>
    <fullName>RenewalProcess4__c</fullName>
    <label>更新行程4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>