force-app/main/default/objects/Renewal__c/fields/RentAccount1__c.field-meta.xml
<CustomField>
    <fullName>RentAccount1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>家賃送金先1_口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>更新 (家賃送金先1_口座)</relationshipLabel>
    <relationshipName>RentAccount1Renewal</relationshipName>
    <type>Lookup</type>
</CustomField>