force-app/main/default/objects/Renewal__c/fields/RentAccount3__c.field-meta.xml
<CustomField>
    <fullName>RentAccount3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>家賃送金先3_口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>更新 (家賃送金先3_口座)</relationshipLabel>
    <relationshipName>RentAccount3Renewal</relationshipName>
    <type>Lookup</type>
</CustomField>